--- a/unique_taglist.yml
+++ b/unique_taglist.yml
@@ -1,5 +1,6 @@
 ---
 layout: page
+title: tag list
 ---
 {% capture tags %}{% for item in site.texts %}{% for t in item.tags%}{{ t }}{% unless forloop.last %}^{% endunless %}{% endfor %}{% unless forloop.last %}^{% endunless %}{% endfor %}
 {% endcapture %}{% assign tag_list = tags | strip | strip_newlines| split: "^" | uniq %}{% for uniq_t in tag_list %}- {{ uniq_t }}
